--- a/TreeProject/src/style.css
+++ b/TreeProject/src/style.css
@@ -1,5 +1,9 @@
 body {
-    margin: 0;
-    overflow: hidden;
-  }
-  
+  margin: 0;
+  overflow: hidden;
+}
+
+canvas {
+  width: 100%;
+  height: 100%;
+}
